tests/sksl/errors/BadOctal.glsl
### Compilation failed:

error: 1: integer is too large: 08
error: 2: integer is too large: 012349
2 errors
